# phantomzero-vrf

./: .gitignore  ACCOUNTING_ANALYSIS.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend-new/: package.json  tailwind.config.js
frontend-new/components/: bet-card.tsx  bet-slip.tsx  header.tsx  match-card.tsx  odds-button.tsx
frontend-new/config/: program.ts  site.ts
frontend-new/hooks/: useBettingPool.ts  useClaimWinnings.ts  useCurrentRound.ts  useMyBets.ts  usePlaceBet.ts  useProgram.ts  useSeasonPrediction.ts
frontend-new/idl/: sportsbook.ts
frontend-new/pages/: _app.tsx  index.tsx  my-bets.tsx  season.tsx
frontend-new/types/: sportsbook.ts
frontend-new/utils/: format.ts  pda.ts
smart-contract/: .gitignore  Anchor.toml  BUILD_STATUS.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  VRF_INTEGRATION_GUIDE.md  package.json
smart-contract/programs/sportsbook/: Cargo.toml
smart-contract/programs/sportsbook/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs  utils.rs  vrf.rs  vrf_integration.md
smart-contract/programs/sportsbook/src/instructions/: claim_winnings.rs  end_season.rs  finalize_revenue.rs  initialize.rs  initialize_round.rs  liquidity.rs  place_bet.rs  season_prediction.rs  seed_round.rs  settle_round.rs  vrf_fulfill.rs  vrf_request.rs
smart-contract/programs/sportsbook/src/state/: bet.rs  betting_pool.rs  liquidity_pool.rs  match_pool.rs  round_accounting.rs  season_prediction.rs
smart-contract/programs/sportsbook/src/utils/: odds.rs  parlay.rs  seeding.rs
(+16 files in other folders)
