[package]
name = "sportsbook"
version = "0.1.0"
description = "Solana sportsbook betting contract with VRF randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sportsbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
switchboard-v2 = "0.4.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
